# disney

./: .gitignore  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
.cursor/rules/: fast-api-rule.mdc
docker/: Dockerfile.api  Dockerfile.context  Dockerfile.notebook  Dockerfile.pipeline
notebooks/: data_exploration.ipynb
scripts/: migrate_data.py  run_pipeline.py  setup_dev.py  test_api.py  test_rag_ingestion.py
src/disney/api/: dependencies.py  main.py  models.py  routes.py
src/disney/context_service/: main.py  models.py  routes.py  vector_db.py
src/disney/pipeline/: ingest.py  scheduler.py
src/disney/rag/: document_processor.py  embedder.py  generator.py  ingestion.py  prompt_template.py  retrieval.py  retrieval_manager.py  vector_store_manager.py
src/disney/shared/: config.py  logging.py  utils.py
tasks/: context_service_implementation.txt  customer_experience_service_implementation.txt  high_level_task.txt  project_structure_plan.txt  simplify_architecture.txt  vector_store_manager_refactor.txt
tests/: conftest.py  test_integration.py
tests/test_api/: test_main.py  test_routes.py
tests/test_rag/: conftest.py  test_ingestion_integration.py  test_retrieval_chain.py
